// compile with:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative q2admin_rpc.proto
syntax="proto3";
option go_package = "github.com/packetflinger/q2admind/proto";
package proto;

service Q2Admin {
    rpc FetchStatus(StatusRequest) returns (StatusResponse) {}
}

message StatusRequest {
    string server = 1;
}

message StatusResponse {
    string uuid = 1;
    string name = 2;
    string map = 3;
    string player_count = 4;
}